# armory-verifier

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.gotee  Dockerfile.wasm  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
applets/gotee/: Cargo.toml  memory.x
applets/gotee/.cargo/: config.toml
applets/gotee/host/: main.go
applets/gotee/src/: main.rs
artifacts/arithmetic/: proof  public_inputs  vk  vk_hash
artifacts/example/: proof  vk  vk_hash
artifacts/hash/: proof  public_inputs  vk  vk_hash
artifacts/large/: proof  public_inputs  vk  vk_hash
artifacts/range/: proof  public_inputs  vk  vk_hash
circuits/arithmetic/: Nargo.toml  Prover.toml  main.nr
circuits/example/: Nargo.toml
circuits/hash/: Nargo.toml  Prover.toml  main.nr
circuits/large/: Nargo.toml  Prover.toml  main.nr
circuits/range/: Nargo.toml  Prover.toml  main.nr
scripts/: benchmark.sh  generate-proofs.sh
src/: constants.rs  deserialize.rs  lib.rs  main.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  wasm.rs
tools/wasm-smoke/: Cargo.toml
tools/wasm-smoke/src/: main.rs
